# algolabra

./: .coveragerc  .pylintrc  README.md  game_ai.py  pyproject.toml  tasks.py
.github/workflows/: pipeline.yml
Dokumentation/: Project_specification.md  Weekly_report_1.md
documentation/: Implementation_document.md  Testing_document.md  Weekly_report_2.md  Weekly_report_4.md  Weekly_report_5.md  Weekly_report_6.md
dokcumentation/: Weekly_report_1.md
dokumentation/: Implementation_document.md  Weekly_report_2.md  Weekly_report_3.md  Weekly_report_4.md
src/: game.py  game_ai.py  game_manager.py  game_printer.py  index.py  play_game.py
src/tests/: ai_test.py  game_test.py
