[tool.poetry]
name = "algolabra"
version = "0.1.0"
description = ""
authors = ["Sanni Isokirmo <sanni.isokirmo@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
